--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- Landing Page -->
 	<ul id="navigation-bar">
-		<li><a href="#home" id="home">Andrew Zhen</a></li>
+		<li><a href="" id="home">Andrew Zhen</a></li>
 		<div id="photography-header">Photography</div>
 		<div class="socialMedia">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
