--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 
 		<div id="socialMediaModals">
-			<div id="snapChatModal" class="modal" onclick="this.style.display='none'">
+			<div id="snapChatModal" class="modal">
 				<div class="modal-content">
 					<span id="snapChatSpan"></span>
 					<p style="padding-top: 125px">SnapChat Username: andrewzee6</p>
@@ -63,7 +63,7 @@
 				</div>
 			</div>
 
-			<div id="weChatModal" class="modal" onclick="this.style.display='none'">
+			<div id="weChatModal" class="modal">
 				<div class="modal-content">
 					<span id="weChatSpan"></span>
 					<p style="padding-top: 125px">WeChat ID: drewzhen</p>
