--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<i>La Jolla, San Diego, CA.</i>
 				</a>
 				La Jolla is a community within the city of San Diego and is home to many cultural attractions, software and bioengineering companies and leaders in scientific research and education. 
-				Because of La Jolla's costal geography, its sandy beaches and rugged shorelines make it the top destination for the perfect sunset photo! 
+				Because of La Jolla's coastal geography, its sandy beaches and rugged shorelines make it the top destination for the perfect sunset photo! 
 				In fact, traveling around La Jolla inspired me to take up a camera and begin snapping photos of it. 
 				I hope I did at least a decent job!
 			</div>
