--- a/home.html
+++ b/home.html
@@ -2,14 +2,13 @@
 <html>
 
 <head>
-	<title>Andrew Zhen</title>
+	<title>Home</title>
 	<link rel="icon" href="blue peter.png" type="image/png">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="homestyle.css">
 </head>
 
 <body id="landing">
-	<!-- landing page -->
-	<h1><a href="./photography.html">Andrew Zhen</a></h1>
+	<img src="portrait.jpg" class="center">
 </body>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
