--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Home</title>
 	<link rel="icon" href="blue peter.png" type="image/png">
-	<link rel="stylesheet" type="text/css" href="homestyle.css">
+	<link rel="stylesheet" type="text/css" href="style/homestyle.css">
 </head>
 
 <body id="landing">
