--- a/home.html
+++ b/home.html
@@ -3,12 +3,12 @@
 
 <head>
 	<title>Home</title>
-	<link rel="icon" href="blue peter.png" type="image/png">
+	<link rel="icon" href="images/blue peter.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="style/homestyle.css">
 </head>
 
 <body id="landing">
-	<img src="portrait.jpg" class="center">
+	<img src="images/portrait.jpg" class="center">
 </body>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
