--- a/home.html
+++ b/home.html
@@ -2,13 +2,37 @@
 <html>
 
 <head>
-	<title>Home</title>
-	<link rel="icon" href="blue peter.png" type="image/png">
-	<link rel="stylesheet" type="text/css" href="homestyle.css">
+	<title>_</title>
+	<link rel="icon" href="images/blue peter.png" type="image/png">
+	<link rel="stylesheet" type="text/css" href="style/homestyle.css">
 </head>
 
 <body id="landing">
-	<img src="portrait.jpg" class="center">
+  <div class="container">
+  	<img src="images/portrait2.jpg" class="profile" width="45%">
+    <div class="profile">
+      Hi, I'm Andrew. <br><br>
+      I was born and raised in the heart of the San Francisco Bay Area in Oakland, 
+      though I did spent a couple of years as a toddler stumbling around Jiangmen, 
+      China—my parents’ beloved hometown. <br><br>
+      Early on, I began to take interest in art and drawing because of my brother, 
+      who first took painting lessons. From then on, I was known as “that kid” 
+      who drew. Though I never really pursued this artistic interest beyond middle 
+      school, I made up in trying plenty of other hobbies and activities. <br><br>
+      Today, I love being outdoors and especially playing basketball, practicing 
+      photography and visual designs, and computer programming. Meanwhile, 
+      attending UC San Diego has marked a significant period of my life. I’ve met 
+      many great people and I’ve learned so much about myself and what it means 
+      to attend a prestigious university in one of the best geographical places 
+      in the world.
+    </div>
+  </div>
+  <div class="resources">
+    <a href="resources/Cover Letter.pdf" class="links">Cover Letter</a>
+    <a href="resources/Resume Andrew_Zhen.pdf" class="links">Resume</a>
+    <a href="mailto:ajzhen@ucsd.edu" class="links">Email</a>
+    <a href="https://www.linkedin.com/in/andrew-zhen/" class="links">LinkedIn</a>
+  </div>
 </body>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
