--- a/photography.html
+++ b/photography.html
@@ -2,13 +2,9 @@
 <html>
 
 <head>
-  <title>Photography</title>
+  <title>A Z</title>
   <link rel="icon" href="images/blue peter.png" type="image/png">
-  <link rel="stylesheet" type="text/css" href="style/stylesheet.css">
-  <meta property="og:site_name" content="Andrew Zhen Photography">
-  <meta propert="og:description" content="Photography portfolio where you can contact me for photoshoots or collaborations. I'm happy to meet new people!">
-  <meta property="og:url" content="https://andrewzhen.github.io/">
-  <meta property="og:type" content="photography">
+  <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
 <body id="photography">
@@ -33,9 +29,13 @@
           <img src="images/location.png" width="20" height="20">
           <i>La Jolla, San Diego, CA.</i>
         </a>
-        La Jolla is a community within the city of San Diego and is home to many cultural attractions, software and bioengineering companies, and leaders in scientific resepor and education. 
-        Because of La Jolla's coastal geography, its sandy beaches and rugged shorelines make it the top destination for the perfect sunset photo! 
-        In fact, traveling around La Jolla inspired me to take up a camera and begin image collecting in general.
+        La Jolla is a community within the city of San Diego and is home to 
+        many cultural attractions, software and bioengineering companies, and 
+        leaders in scientific resepor and education. Because of La Jolla's 
+        coastal geography, its sandy beaches and rugged shorelines make it the 
+        top destination for the perfect sunset photo! In fact, traveling 
+        around La Jolla inspired me to take up a camera and begin image 
+        collecting in general.
       </div>
     </div>
   </section>
@@ -51,7 +51,8 @@
           <p>Hello,</p>
           <p>I'm Andrew</p>
           <p>
-            This is a display of some photography I've done. You can contact me at the social media links above.
+            This is a display of some photography I've done. You can also 
+            contact me at the social media links above.
           </p>
         </div>
       </div>
@@ -106,7 +107,7 @@
       </div>
 
       <div id="Portrait">
-        <img id="por1" src="images/portrait/por1.jpg" onclick="document.getElementById('por1Modal').style.display='block'">
+        <!-- <img id="por1" src="images/portrait/por1.jpg" onclick="document.getElementById('por1Modal').style.display='block'"> -->
       </div>
 
     <div class="imgModals" align="center">
