--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>_</title>
+	<title>__</title>
 	<link rel="icon" href="images/blue peter.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="style/homestyle.css">
 </head>
@@ -12,22 +12,19 @@
   	<img src="images/portrait2.jpg" class="profile" width="45%">
     <div class="profile">
       Hi, I'm Andrew. <br><br>
-      I was born and raised in the heart of the San Francisco Bay Area in Oakland, 
-      though I did spent a couple of years as a toddler stumbling around Jiangmen, 
-      China—my parents’ beloved hometown. <br><br>
-      Early on, I began to take interest in art and drawing because of my brother, 
-      who first took painting lessons. From then on, I was known as “that kid” 
-      who drew. Though I never really pursued this artistic interest beyond middle 
-      school, I made up in trying plenty of other hobbies and activities. <br><br>
-      Today, I love being outdoors and especially playing basketball, practicing 
-      photography and visual designs, and computer programming. Meanwhile, 
-      attending UC San Diego has marked a significant period of my life. I’ve met 
-      many great people and I’ve learned so much about myself and what it means 
-      to attend a prestigious university in one of the best geographical places 
-      in the world.
+      I am from the heart of the San Francisco Bay Area in Oakland. <br><br>
+      I am currently finishing up my second-year as an undergraduate at UC San 
+      Diego where I am working towards a B.S. degree in Data Science. Courses 
+      I have taken include Principles of Data Science, Data Structures, Data
+      Theory, Linear Algebra and Object-Oriented Programming. <br><br>
+      By taking courses within the data science discipline along with a focus 
+      in computer science, I hope to someday work as a Data Engineer or a 
+      Backend Developer. So far, I have experience as an investment data science 
+      intern and I have completed several relevant projects.
     </div>
   </div>
   <div class="resources">
+    <a href="resources/research_report.pdf" class="links">Research</a>
     <a href="resources/Cover Letter.pdf" class="links">Cover Letter</a>
     <a href="resources/Resume Andrew_Zhen.pdf" class="links">Resume</a>
     <a href="mailto:ajzhen@ucsd.edu" class="links">Email</a>
