--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>__</title>
+  <title>Andrew Zhen</title>
   <link rel="icon" href="images/blue peter.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
@@ -14,10 +14,10 @@
     <li><a href="" id="home">Andrew Zhen</a></li>
     
     <div class="socialMedia">
+      <!-- Loads social media icons -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <a style="cursor: pointer" id="snapchat" class="fa fa-snapchat-ghost"></a>
-      <a style="cursor: pointer" id="wechat" class="fa fa-wechat"></a>
-      <a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram" target="_blank"></a>
+      <a href="https://www.linkedin.com/in/andrew-zhen/" class="fa fa-linkedin" title="Instagram" target="_blank"></a>
+      <a href="https://www.instagram.com/a.jzhen/" class="fa fa-instagram" title="LinkedIn" target="_blank"></a>
     </div>
     <div id="photography-header">Photography</div>
   </ul>
@@ -31,10 +31,10 @@
         </a>
         La Jolla is a community within the city of San Diego and is home to 
         many cultural attractions, software and bioengineering companies, and 
-        leaders in scientific resepor and education. Because of La Jolla's 
+        leaders in scientific research and education. Because of La Jolla's 
         coastal geography, its sandy beaches and rugged shorelines make it the 
-        top destination for the perfect sunset photo! In fact, traveling 
-        around La Jolla inspired me to take up a camera and begin image 
+        top destination for the perfect sunset photo! Traveling around 
+        La Jolla inspired me to take up a camera and begin image 
         collecting in general.
       </div>
     </div>
@@ -51,27 +51,9 @@
           <p>Hello,</p>
           <p>I'm Andrew</p>
           <p>
-            This is a display of some photography I've done. You can also 
-            contact me at the social media links above.
+            This is a display of some photography I've done. You can contact me
+            at the resources linked above.
           </p>
-        </div>
-      </div>
-    </div>
-
-    <div id="socialMediaModals">
-      <div id="snapChatModal" class="modal">
-        <div class="modal-content">
-          <span id="snapChatSpan"></span>
-          <p style="padding-top: 125px">SnapChat Username: andrewzee6</p>
-          <img src="images/snapChatQR.png" style="border-radius: 8%"  onclick="document.getElementById('snapChatModal').style.display='block'">
-        </div>
-      </div>
-
-      <div id="weChatModal" class="modal">
-        <div class="modal-content">
-          <span id="weChatSpan"></span>
-          <p style="padding-top: 125px">WeChat ID: drewzhen</p>
-          <img src="images/weChatQR.png" style="border-radius: 4%; width: 525px; height: 525px"  onclick="document.getElementById('weChatModal').style.display='block'">
         </div>
       </div>
     </div>
@@ -79,39 +61,80 @@
 
   <!-- Photos -->
   <section class="contentSection">
-    <div class="categories">
-      <button id="btn1" class="categoryButton" onclick="focus1();refreshContent('Landscape','Portrait')">Landscape</button>
-      <button id="btn2" class="categoryButton" onclick="focus2();refreshContent('Portrait','Landscape')">Portrait</button>
-    </div>
+    <div class="gallery-div"> <h1 class="gallery">Gallery</h1> </div>
 
+    <!-- Thumbnail -->
     <div class="photos imageStyle">
       <div id="Landscape">
-        <img id="land1" src="images/landscape/land1.jpg" onclick="document.getElementById('land1Modal').style.display='block'">
-        <img id="land2" src="images/landscape/land2.jpg" onclick="document.getElementById('land2Modal').style.display='block'">
-        <img id="land3" src="images/landscape/land3.jpg" onclick="document.getElementById('land3Modal').style.display='block'">
-        <img id="land4" src="images/landscape/land4.jpg" onclick="document.getElementById('land4Modal').style.display='block'">
-        <img id="land5" src="images/landscape/land5.jpg" onclick="document.getElementById('land5Modal').style.display='block'">
-        <img id="land6" src="images/landscape/land6.jpg" onclick="document.getElementById('land6Modal').style.display='block'">
-        <img id="land7" src="images/landscape/land7.jpg" onclick="document.getElementById('land7Modal').style.display='block'">
-        <img id="land8" src="images/landscape/land8.jpg" onclick="document.getElementById('land8Modal').style.display='block'">
-        <img id="land9" src="images/landscape/land9.jpg" onclick="document.getElementById('land9Modal').style.display='block'">
-        <img id="land10" src="images/landscape/land10.jpg" onclick="document.getElementById('land10Modal').style.display='block'">
-        <img id="land11" src="images/landscape/land11.jpg" onclick="document.getElementById('land11Modal').style.display='block'">
-        <img id="land12" src="images/landscape/land12.jpg" onclick="document.getElementById('land12Modal').style.display='block'">
-        <img id="land13" src="images/landscape/land13.jpg" onclick="document.getElementById('land13Modal').style.display='block'">
-        <img id="land14" src="images/landscape/land14.jpg" onclick="document.getElementById('land14Modal').style.display='block'">
-        <img id="land15" src="images/landscape/land15.jpg" onclick="document.getElementById('land15Modal').style.display='block'">
-        <img id="land16" src="images/landscape/land16.jpg" onclick="document.getElementById('land16Modal').style.display='block'">
-        <img id="land17" src="images/landscape/land17.jpg" onclick="document.getElementById('land17Modal').style.display='block'">
-        <img id="land18" src="images/landscape/land18.jpg" onclick="document.getElementById('land18Modal').style.display='block'">
+        <div class="img_wrap">
+          <img id="land1" src="images/landscape/land1.jpg" onclick="document.getElementById('land1Modal').style.display='block'">
+          <p class="cap"><span>Marin Headlands</span><span style="font-size: 1vw">Marin County</span></p></div>
+        <div class="img_wrap">
+          <img id="land2" src="images/landscape/land2.jpg" onclick="document.getElementById('land2Modal').style.display='block'">
+          <p class="cap" style="color: black"><span>Salk Institute</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap">  
+          <img id="land3" src="images/landscape/land3.jpg" onclick="document.getElementById('land3Modal').style.display='block'">
+          <p class="cap"><span>La Jolla Shores</span><span style="font-size: 1vw">La Jolla</span></p></div>
       </div>
-
-      <div id="Portrait">
-        <!-- <img id="por1" src="images/portrait/por1.jpg" onclick="document.getElementById('por1Modal').style.display='block'"> -->
+      <div id="Landscape">
+        <div class="img_wrap">
+          <img id="land4" src="images/landscape/land4.jpg" onclick="document.getElementById('land4Modal').style.display='block'">
+          <p class="cap"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap">
+          <img id="land5" src="images/landscape/land5.jpg" onclick="document.getElementById('land5Modal').style.display='block'">
+          <p class="cap"><span>Guifeng Mountain</span><span style="font-size: 1vw">Jiangmen</span></p></div>
+        <div class="img_wrap">
+          <img id="land6" src="images/landscape/land6.jpg" onclick="document.getElementById('land6Modal').style.display='block'">
+          <p class="cap"><span>Xiqiao Mountain</span><span style="font-size: 1vw">Foshan</span></p></div>
       </div>
+      <div id="Landscape">
+        <div class="img_wrap">
+          <img id="land7" src="images/landscape/land7.jpg" onclick="document.getElementById('land7Modal').style.display='block'">
+          <p class="cap" style="color: black"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap">  
+          <img id="land8" src="images/landscape/land8.jpg" onclick="document.getElementById('land8Modal').style.display='block'">
+          <p class="cap"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap">  
+          <img id="land9" src="images/landscape/land9.jpg" onclick="document.getElementById('land9Modal').style.display='block'">
+          <p class="cap"><span>Posey Tube</span><span style="font-size: 1vw">Alameda</span></p></div>
+      </div>
+      <div id="Landscape">
+        <div class="img_wrap">  
+          <img id="land10" src="images/landscape/land10.jpg" onclick="document.getElementById('land10Modal').style.display='block'">
+          <p class="cap" style="color: black"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap">  
+          <img id="land11" src="images/landscape/land11.jpg" onclick="document.getElementById('land11Modal').style.display='block'">
+          <p class="cap"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap">  
+          <img id="land12" src="images/landscape/land12.jpg" onclick="document.getElementById('land12Modal').style.display='block'">
+          <p class="cap"><span>Vikingsholm Castle</span><span style="font-size: 1vw">South Lake Tahoe</span></p></div>
+      </div>
+      <div id="Landscape">
+        <div class="img_wrap">  
+          <img id="land13" src="images/landscape/land13.jpg" onclick="document.getElementById('land13Modal').style.display='block'">
+          <p class="cap"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap">  
+          <img id="land14" src="images/landscape/land14.jpg" onclick="document.getElementById('land14Modal').style.display='block'">
+          <p class="cap"><span>Guangzhou</span><span style="font-size: 1vw">China</span></p></div>
+        <div class="img_wrap">  
+          <img id="land15" src="images/landscape/land15.jpg" onclick="document.getElementById('land15Modal').style.display='block'">
+          <p class="cap"><span>Dongwu Park</span><span style="font-size: 1vw">Jiangmen</span></p></div>
+      </div>
+      <div id="Landscape">
+        <div class="img_wrap">  
+          <img id="land16" src="images/landscape/land16.jpg" onclick="document.getElementById('land16Modal').style.display='block'">
+          <p class="cap"><span>Jiangmen</span><span style="font-size: 1vw">China</span></p></div>
+        <div class="img_wrap">  
+          <img id="land17" src="images/landscape/land17.jpg" onclick="document.getElementById('land17Modal').style.display='block'">
+          <p class="cap"><span>Huacheng Square</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap">  
+          <img id="land18" src="images/landscape/land18.jpg" onclick="document.getElementById('land18Modal').style.display='block'">
+          <p class="cap"><span>Windansea Beach</span><span style="font-size: 1vw">La Jolla</span></p></div>
+      </div>
+    </div>
 
+    <!-- Enlargement -->
     <div class="imgModals" align="center">
-      <!-- Landscape Modals -->
       <div id="land1Modal" class="modal" onclick="this.style.display='none'">
         <img src="images/landscape/land1.jpg">
       </div>
@@ -200,98 +223,6 @@
           <span id="land18Span"></span><img src="images/landscape/land18.jpg">
         </div>
       </div>
-
-      <!-- portrait Modals -->
-      <!-- <div id="por1Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por1Span"></span><img src="images/portrait/por1.jpg">
-        </div>
-      </div> -->
-      <!-- <div id="por2Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por2Span"></span><img src="images/portrait/por2.jpg">
-        </div>
-      </div>
-      <div id="por3Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por3Span"></span><img src="images/portrait/por3.jpg">
-        </div>
-      </div>
-      <div id="por4Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por4Span"></span><img src="images/portrait/por4.jpg">
-        </div>
-      </div>
-      <div id="por5Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por5Span"></span><img src="images/portrait/por5.jpg">
-        </div>
-      </div>
-      <div id="por6Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por6Span"></span><img src="images/portrait/por6.jpg">
-        </div>
-      </div>
-      <div id="por7Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por7Span"></span><img src="images/portrait/por7.jpg">
-        </div>
-      </div>
-      <div id="por8Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por8Span"></span><img src="images/portrait/por8.jpg">
-        </div>
-      </div>
-      <div id="por9Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por9Span"></span><img src="images/portrait/por9.jpg">
-        </div>
-      </div>
-      <div id="por10Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por10Span"></span><img src="images/portrait/por10.jpg">
-        </div>
-      </div>
-      <div id="por11Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por11Span"></span><img src="images/portrait/por11.jpg">
-        </div>
-      </div>
-      <div id="por12Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por12Span"></span><img src="images/portrait/por12.jpg">
-        </div>
-      </div>
-      <div id="por13Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por13Span"></span><img src="images/portrait/por13.jpg">
-        </div>
-      </div>
-      <div id="por14Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por14Span"></span><img src="images/portrait/por14.jpg">
-        </div>
-      </div>
-      <div id="por15Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por15Span"></span><img src="images/portrait/por15.jpg">
-        </div>
-      </div>
-      <div id="por16Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por16Span"></span><img src="images/portrait/por16.jpg">
-        </div>
-      </div>
-      <div id="por17Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por17Span"></span><img src="images/portrait/por17.jpg">
-        </div>
-      </div>
-      <div id="por18Modal" class="modal" onclick="this.style.display='none'">
-        <div class="modal-content">
-          <span id="por18Span"></span><img src="images/portrait/por18.jpg">
-        </div>
-      </div> -->
     </div>
   </section>
 
