--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Landing Page -->
   <ul id="navigation-bar">
-    <li><a href="" id="home">Andrew Zhen</a></li>
+    <li><a id="home"><b>&delta;</b>Ƶ</a></li>
     
     <div class="socialMedia">
       <!-- Loads social media icons -->
@@ -27,7 +27,7 @@
       <div class="animation-text">
         <a href="https://www.google.com/maps/place/La+Jolla,+San+Diego,+CA/@32.8725017,-117.3186122,12z/data=!3m1!4b1!4m5!3m4!1s0x80dbd0764fcc0ecd:0xfce51ef45c1d3094!8m2!3d32.8328112!4d-117.2712717" title="Directions to La Jolla, CA" target="_blank" style="text-decoration: none; color: red">
           <img src="images/location.png" width="20" height="20">
-          <i>La Jolla, San Diego, CA.</i>
+          <i>La Jolla, San Diego, CA &nbsp;</i>
         </a>
         La Jolla is a community within the city of San Diego and is home to 
         many cultural attractions, software and bioengineering companies, and 
@@ -43,184 +43,174 @@
   <!-- About -->
   <section style="text-align: center">
     <div class="horizontal-divider"></div>
-
-    <div class="table">
-      <div class="portrait"></div>
-      <div class="description-container">
-        <div class="description">
-          <p>Hello,</p>
-          <p>I'm Andrew</p>
-          <p>
-            This is a display of some photography I've done. You can contact me
-            at the resources linked above.
-          </p>
-        </div>
-      </div>
-    </div>
+    <div class="portrait"></div>
+    <div class="portrait-caption">Point Loma Lighthouse <br><p style="font-size: 0.7vw">San Diego, CA</p></div>
   </section>
 
   <!-- Photos -->
   <section class="contentSection">
-    <div class="gallery-div"> <h1 class="gallery">Gallery</h1> </div>
+    <div class="horizontal-divider"></div>
 
     <!-- Thumbnail -->
     <div class="photos imageStyle">
       <div id="Landscape">
-        <div class="img_wrap">
-          <img id="land1" src="images/landscape/land1.jpg" onclick="document.getElementById('land1Modal').style.display='block'">
-          <p class="cap"><span>Marin Headlands</span><span style="font-size: 1vw">Marin County</span></p></div>
-        <div class="img_wrap">
-          <img id="land2" src="images/landscape/land2.jpg" onclick="document.getElementById('land2Modal').style.display='block'">
-          <p class="cap" style="color: black"><span>Salk Institute</span><span style="font-size: 1vw">La Jolla</span></p></div>
-        <div class="img_wrap">  
-          <img id="land3" src="images/landscape/land3.jpg" onclick="document.getElementById('land3Modal').style.display='block'">
-          <p class="cap"><span>La Jolla Shores</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land1Modal').style.display='block'">
+          <img id="land1" src="images/landscape/land1.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Marin Headlands</span><span style="font-size: 1vw">Marin County</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land2Modal').style.display='block'">
+          <img id="land2" src="images/landscape/land2.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Salk Institute</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap"  onclick="document.getElementById('land3Modal').style.display='block'">
+          <img id="land3" src="images/landscape/land3.jpg">
+          <p class="cap"><span style="margin-top: 9vw">La Jolla Shores</span><span style="font-size: 1vw">La Jolla</span></p></div>
       </div>
       <div id="Landscape">
-        <div class="img_wrap">
-          <img id="land4" src="images/landscape/land4.jpg" onclick="document.getElementById('land4Modal').style.display='block'">
-          <p class="cap"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap">
-          <img id="land5" src="images/landscape/land5.jpg" onclick="document.getElementById('land5Modal').style.display='block'">
-          <p class="cap"><span>Guifeng Mountain</span><span style="font-size: 1vw">Jiangmen</span></p></div>
-        <div class="img_wrap">
-          <img id="land6" src="images/landscape/land6.jpg" onclick="document.getElementById('land6Modal').style.display='block'">
-          <p class="cap"><span>Xiqiao Mountain</span><span style="font-size: 1vw">Foshan</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land4Modal').style.display='block'">
+          <img id="land4" src="images/landscape/land4.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land5Modal').style.display='block'">
+          <img id="land5" src="images/landscape/land5.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Guifeng Mountain</span><span style="font-size: 1vw">Jiangmen</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land6Modal').style.display='block'">
+          <img id="land6" src="images/landscape/land6.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Xiqiao Mountain</span><span style="font-size: 1vw">Foshan</span></p></div>
       </div>
       <div id="Landscape">
-        <div class="img_wrap">
-          <img id="land7" src="images/landscape/land7.jpg" onclick="document.getElementById('land7Modal').style.display='block'">
-          <p class="cap" style="color: black"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap">  
-          <img id="land8" src="images/landscape/land8.jpg" onclick="document.getElementById('land8Modal').style.display='block'">
-          <p class="cap"><span>Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap">  
-          <img id="land9" src="images/landscape/land9.jpg" onclick="document.getElementById('land9Modal').style.display='block'">
-          <p class="cap"><span>Posey Tube</span><span style="font-size: 1vw">Alameda</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land7Modal').style.display='block'">
+          <img id="land7" src="images/landscape/land7.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land8Modal').style.display='block'">  
+          <img id="land8" src="images/landscape/land8.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land9Modal').style.display='block'">  
+          <img id="land9" src="images/landscape/land9.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Posey Tube</span><span style="font-size: 1vw">Alameda</span></p></div>
       </div>
       <div id="Landscape">
-        <div class="img_wrap">  
-          <img id="land10" src="images/landscape/land10.jpg" onclick="document.getElementById('land10Modal').style.display='block'">
-          <p class="cap" style="color: black"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap">  
-          <img id="land11" src="images/landscape/land11.jpg" onclick="document.getElementById('land11Modal').style.display='block'">
-          <p class="cap"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap">  
-          <img id="land12" src="images/landscape/land12.jpg" onclick="document.getElementById('land12Modal').style.display='block'">
-          <p class="cap"><span>Vikingsholm Castle</span><span style="font-size: 1vw">South Lake Tahoe</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land10Modal').style.display='block'">  
+          <img id="land10" src="images/landscape/land10.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land11Modal').style.display='block'">  
+          <img id="land11" src="images/landscape/land11.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land12Modal').style.display='block'">  
+          <img id="land12" src="images/landscape/land12.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Vikingsholm Castle</span><span style="font-size: 1vw">South Lake Tahoe</span></p></div>
       </div>
       <div id="Landscape">
-        <div class="img_wrap">  
-          <img id="land13" src="images/landscape/land13.jpg" onclick="document.getElementById('land13Modal').style.display='block'">
-          <p class="cap"><span>Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap">  
-          <img id="land14" src="images/landscape/land14.jpg" onclick="document.getElementById('land14Modal').style.display='block'">
-          <p class="cap"><span>Guangzhou</span><span style="font-size: 1vw">China</span></p></div>
-        <div class="img_wrap">  
-          <img id="land15" src="images/landscape/land15.jpg" onclick="document.getElementById('land15Modal').style.display='block'">
-          <p class="cap"><span>Dongwu Park</span><span style="font-size: 1vw">Jiangmen</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land13Modal').style.display='block'">  
+          <img id="land13" src="images/landscape/land13.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land14Modal').style.display='block'">  
+          <img id="land14" src="images/landscape/land14.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Guangzhou</span><span style="font-size: 1vw">China</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land15Modal').style.display='block'">  
+          <img id="land15" src="images/landscape/land15.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Dongwu Park</span><span style="font-size: 1vw">Jiangmen</span></p></div>
       </div>
       <div id="Landscape">
-        <div class="img_wrap">  
-          <img id="land16" src="images/landscape/land16.jpg" onclick="document.getElementById('land16Modal').style.display='block'">
-          <p class="cap"><span>Jiangmen</span><span style="font-size: 1vw">China</span></p></div>
-        <div class="img_wrap">  
-          <img id="land17" src="images/landscape/land17.jpg" onclick="document.getElementById('land17Modal').style.display='block'">
-          <p class="cap"><span>Huacheng Square</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap">  
-          <img id="land18" src="images/landscape/land18.jpg" onclick="document.getElementById('land18Modal').style.display='block'">
-          <p class="cap"><span>Windansea Beach</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land16Modal').style.display='block'">  
+          <img id="land16" src="images/landscape/land16.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Jiangmen</span><span style="font-size: 1vw">China</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land17Modal').style.display='block'">  
+          <img id="land17" src="images/landscape/land17.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Huacheng Square</span><span style="font-size: 1vw">Guangzhou</span></p></div>
+        <div class="img_wrap" onclick="document.getElementById('land18Modal').style.display='block'">  
+          <img id="land18" src="images/landscape/land18.jpg">
+          <p class="cap"><span style="margin-top: 9vw">Windansea Beach</span><span style="font-size: 1vw">La Jolla</span></p></div>
       </div>
     </div>
 
     <!-- Enlargement -->
     <div class="imgModals" align="center">
       <div id="land1Modal" class="modal" onclick="this.style.display='none'">
-        <img src="images/landscape/land1.jpg">
+        <div class="modal-content">
+          <span id="land1Span"></span><img src="images/landscape/full/DSC_1091.jpg">
+        </div>
       </div>
       <div id="land2Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land2Span"></span><img src="images/landscape/land2.jpg">
+          <span id="land2Span"></span><img src="images/landscape/full/DSC_0902.jpg">
         </div>
       </div>
       <div id="land3Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land3Span"></span><img src="images/landscape/land3.jpg">
+          <span id="land3Span"></span><img src="images/landscape/full/DSC_1410.jpg">
         </div>
       </div>
       <div id="land4Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land4Span"></span><img src="images/landscape/land4.jpg">
+          <span id="land4Span"></span><img src="images/landscape/full/DSC_0342.jpg">
         </div>
       </div>
       <div id="land5Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land5Span"></span><img src="images/landscape/land5.jpg">
+          <span id="land5Span"></span><img src="images/landscape/full/DSC_0157.jpg">
         </div>
       </div>
       <div id="land6Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land6Span"></span><img src="images/landscape/land6.jpg">
+          <span id="land6Span"></span><img src="images/landscape/full/DSC_0992.jpg">
         </div>
       </div>
       <div id="land7Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land7Span"></span><img src="images/landscape/land7.jpg">
+          <span id="land7Span"></span><img src="images/landscape/full/DSC_0212.jpg">
         </div>
       </div>
       <div id="land8Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land8Span"></span><img src="images/landscape/land8.jpg">
+          <span id="land8Span"></span><img src="images/landscape/full/DSC_0251.jpg">
         </div>
       </div>
       <div id="land9Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land9Span"></span><img src="images/landscape/land9.jpg">
+          <span id="land9Span"></span><img src="images/landscape/full/DSC_0597.jpg">
         </div>
       </div>
       <div id="land10Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land10Span"></span><img src="images/landscape/land10.jpg">
+          <span id="land10Span"></span><img src="images/landscape/full/DSC_0409.jpg">
         </div>
       </div>
       <div id="land11Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land11Span"></span><img src="images/landscape/land11.jpg">
+          <span id="land11Span"></span><img src="images/landscape/full/DSC_0620.jpg">
         </div>
       </div>
       <div id="land12Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land12Span"></span><img src="images/landscape/land12.jpg">
+          <span id="land12Span"></span><img src="images/landscape/full/DSC_0434.jpg">
         </div>
       </div>
       <div id="land13Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land13Span"></span><img src="images/landscape/land13.jpg">
+          <span id="land13Span"></span><img src="images/landscape/full/DSC_0597_2.jpg">
         </div>
       </div>
       <div id="land14Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land14Span"></span><img src="images/landscape/land14.jpg">
+          <span id="land14Span"></span><img src="images/landscape/full/DSC_0588.jpg">
         </div>
       </div>
       <div id="land15Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land15Span"></span><img src="images/landscape/land15.jpg">
+          <span id="land15Span"></span><img src="images/landscape/full/DSC_0803.jpg">
         </div>
       </div>
       <div id="land16Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land16Span"></span><img src="images/landscape/land16.jpg">
+          <span id="land16Span"></span><img src="images/landscape/full/DSC_0664.jpg">
         </div>
       </div>
       <div id="land17Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land17Span"></span><img src="images/landscape/land17.jpg">
+          <span id="land17Span"></span><img src="images/landscape/full/DSC_0656.jpg">
         </div>
       </div>
       <div id="land18Modal" class="modal" onclick="this.style.display='none'">
         <div class="modal-content">
-          <span id="land18Span"></span><img src="images/landscape/land18.jpg">
+          <span id="land18Span"></span><img src="images/landscape/full/DSC_0116.jpg">
         </div>
       </div>
     </div>
@@ -228,12 +218,9 @@
 
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 
-   <footer>
-      <ul id="foot">
-        <li id="footer-description">Photographs taken with a Nikon D3300</li>
-        <li id="footer-date">2018</li>
-      </ul>
-    </footer>
+  <footer class="foot-div">
+    <div class="foot">&copy; 2018 Andrew Zhen</div>
+  </footer>
 </body>
 
 <script src="script.js"></script>
