--- a/index.html
+++ b/index.html
@@ -54,70 +54,165 @@
     <!-- Thumbnail -->
     <div class="photos imageStyle">
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land1Modal').style.display='block'">
-          <img id="land1" src="images/landscape/land1.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Marin Headlands</span><span style="font-size: 1vw">Marin County</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land2Modal').style.display='block'">
-          <img id="land2" src="images/landscape/land2.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Salk Institute</span><span style="font-size: 1vw">La Jolla</span></p></div>
-        <div class="img_wrap"  onclick="document.getElementById('land3Modal').style.display='block'">
-          <img id="land3" src="images/landscape/land3.jpg">
-          <p class="cap"><span style="margin-top: 9vw">La Jolla Shores</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img src="images/landscape/land1.jpg">
+            <p class="cap" onclick="document.getElementById('land1Modal').style.display='block'">
+              <span style="margin-top: 9vw">Marin Headlands</span><span style="font-size: 1vw">Marin County</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land" src="images/landscape/land2.jpg">
+            <p class="cap" onclick="document.getElementById('land2Modal').style.display='block'">
+              <span style="margin-top: 9vw">Salk Institute</span><span style="font-size: 1vw">La Jolla</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land" src="images/landscape/land3.jpg">
+            <p class="cap" onclick="document.getElementById('land3Modal').style.display='block'">
+              <span style="margin-top: 9vw">La Jolla Shores</span><span style="font-size: 1vw">La Jolla</span>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land4Modal').style.display='block'">
-          <img id="land4" src="images/landscape/land4.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land5Modal').style.display='block'">
-          <img id="land5" src="images/landscape/land5.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Guifeng Mountain</span><span style="font-size: 1vw">Jiangmen</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land6Modal').style.display='block'">
-          <img id="land6" src="images/landscape/land6.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Xiqiao Mountain</span><span style="font-size: 1vw">Foshan</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land4" src="images/landscape/land4.jpg">
+            <p class="cap" onclick="document.getElementById('land4Modal').style.display='block'">
+              <span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land5" src="images/landscape/land5.jpg">
+            <p class="cap" onclick="document.getElementById('land5Modal').style.display='block'">
+              <span style="margin-top: 9vw">Guifeng Mountain</span><span style="font-size: 1vw">Jiangmen</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land6" src="images/landscape/land6.jpg">
+            <p class="cap" onclick="document.getElementById('land6Modal').style.display='block'">
+              <span style="margin-top: 9vw">Xiqiao Mountain</span><span style="font-size: 1vw">Foshan</span>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land7Modal').style.display='block'">
-          <img id="land7" src="images/landscape/land7.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land8Modal').style.display='block'">  
-          <img id="land8" src="images/landscape/land8.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land9Modal').style.display='block'">  
-          <img id="land9" src="images/landscape/land9.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Posey Tube</span><span style="font-size: 1vw">Alameda</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land7" src="images/landscape/land7.jpg">
+            <p class="cap" onclick="document.getElementById('land7Modal').style.display='block'">
+              <span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land8" src="images/landscape/land8.jpg">
+            <p class="cap" onclick="document.getElementById('land8Modal').style.display='block'">
+              <span style="margin-top: 9vw">Yosemite National Park</span><span style="font-size: 1vw">Sierra Nevada Mountains</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land9" src="images/landscape/land9.jpg">
+            <p class="cap" onclick="document.getElementById('land9Modal').style.display='block'">
+              <span style="margin-top: 9vw">Posey Tube</span><span style="font-size: 1vw">Alameda</span>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land10Modal').style.display='block'">  
-          <img id="land10" src="images/landscape/land10.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land11Modal').style.display='block'">  
-          <img id="land11" src="images/landscape/land11.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land12Modal').style.display='block'">  
-          <img id="land12" src="images/landscape/land12.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Vikingsholm Castle</span><span style="font-size: 1vw">South Lake Tahoe</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land10" src="images/landscape/land10.jpg">
+            <p class="cap" onclick="document.getElementById('land10Modal').style.display='block'">
+              <span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land11" src="images/landscape/land11.jpg">
+            <p class="cap" onclick="document.getElementById('land11Modal').style.display='block'">
+              <span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land12" src="images/landscape/land12.jpg">
+            <p class="cap" onclick="document.getElementById('land12Modal').style.display='block'">
+              <span style="margin-top: 9vw">Vikingsholm Castle</span><span style="font-size: 1vw">South Lake Tahoe</span>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land13Modal').style.display='block'">  
-          <img id="land13" src="images/landscape/land13.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land14Modal').style.display='block'">  
-          <img id="land14" src="images/landscape/land14.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Guangzhou</span><span style="font-size: 1vw">China</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land15Modal').style.display='block'">  
-          <img id="land15" src="images/landscape/land15.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Dongwu Park</span><span style="font-size: 1vw">Jiangmen</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land13" src="images/landscape/land13.jpg">
+            <p class="cap" onclick="document.getElementById('land13Modal').style.display='block'">
+              <span style="margin-top: 9vw">Pearl River</span><span style="font-size: 1vw">Guangzhou</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land14" src="images/landscape/land14.jpg">
+            <p class="cap" onclick="document.getElementById('land14Modal').style.display='block'">
+              <span style="margin-top: 9vw">Guangzhou</span><span style="font-size: 1vw">China</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land15" src="images/landscape/land15.jpg">
+            <p class="cap" onclick="document.getElementById('land15Modal').style.display='block'">
+              <span style="margin-top: 9vw">Dongwu Park</span><span style="font-size: 1vw">Jiangmen</span>
+            </p>
+          </div>
+        </div>
       </div>
+
       <div id="Landscape">
-        <div class="img_wrap" onclick="document.getElementById('land16Modal').style.display='block'">  
-          <img id="land16" src="images/landscape/land16.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Jiangmen</span><span style="font-size: 1vw">China</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land17Modal').style.display='block'">  
-          <img id="land17" src="images/landscape/land17.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Huacheng Square</span><span style="font-size: 1vw">Guangzhou</span></p></div>
-        <div class="img_wrap" onclick="document.getElementById('land18Modal').style.display='block'">  
-          <img id="land18" src="images/landscape/land18.jpg">
-          <p class="cap"><span style="margin-top: 9vw">Windansea Beach</span><span style="font-size: 1vw">La Jolla</span></p></div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land16" src="images/landscape/land16.jpg">
+            <p class="cap" onclick="document.getElementById('land16Modal').style.display='block'">
+              <span style="margin-top: 9vw">Jiangmen</span><span style="font-size: 1vw">China</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land17" src="images/landscape/land17.jpg">
+            <p class="cap" onclick="document.getElementById('land17Modal').style.display='block'">
+              <span style="margin-top: 9vw">Huacheng Square</span><span style="font-size: 1vw">Guangzhou</span>
+            </p>
+          </div>
+        </div>
+        <div class="img_wrap">
+          <div class="img_div">
+            <img id="land18" src="images/landscape/land18.jpg">
+            <p class="cap" onclick="document.getElementById('land18Modal').style.display='block'">
+              <span style="margin-top: 9vw">Windansea Beach</span><span style="font-size: 1vw">La Jolla</span>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
