--- a/projects/countdown/countdown.html
+++ b/projects/countdown/countdown.html
@@ -153,4 +153,14 @@
     }, 1000);
   </script>
 </body>
+
+<!-- Google Analytics -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4577751840147016",
+    enable_page_level_ads: true
+  });
+</script>
+
 </html>
