--- a/projects/countdown/countdown.html
+++ b/projects/countdown/countdown.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102146073-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-102146073-2');
+  </script>
+
   <title>Count Down</title>
   <link rel="shortcut icon" type="image/png" href="rocket.png">
 
@@ -153,14 +163,4 @@
     }, 1000);
   </script>
 </body>
-
-<!-- Google Analytics -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-4577751840147016",
-    enable_page_level_ads: true
-  });
-</script>
-
 </html>
