--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Andrew Zhen</title>
 </head>
 <body>
-  <center><img src="sky.jpg" width="630"></center>
+  <center><img src="sky.jpg" width=620></center>
 </body>
 </html>
