--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
 <head>
   <title>Andrew Zhen</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <center><img src="sky.jpg" width=620></center>
+  <div class="top-margin">
+    <center class="name">Andrew Zhen</center>
+    <center class="description">Designer & Developer</center>
+
+    <div class="links">
+      <a href="https://www.linkedin.com/in/andrew-zhen/" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://www.instagram.com/a.jzhen/" target="_blank" class="fa fa-instagram"></a>
+      <a href="https://github.com/andrewzhen" target="_blank" class="fa github"></a>
+      <a href="https://ajzhen-photo.herokuapp.com" target="_blank" class="fa photography"></a>
+      <a href="resume.pdf" target="_blank" class="fa resume"></a>
+      <a href="mailto:andrewjzhen@gmail.com" target="_blank" class="fa email"></a>
+    </div>
+  </div>
 </body>
 </html>
