--- a/index.html
+++ b/index.html
@@ -2,23 +2,71 @@
 <html>
 <head>
   <title>Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-  <div class="top-margin">
-    <center class="name">Andrew Zhen</center>
-    <center class="description">Designer & Developer</center>
 
-    <div class="links">
-      <a href="https://www.linkedin.com/in/andrew-zhen/" target="_blank" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com/a.jzhen/" target="_blank" class="fa fa-instagram"></a>
-      <a href="https://github.com/andrewzhen" target="_blank" class="fa github"></a>
-      <a href="https://ajzhen-photo.herokuapp.com" target="_blank" class="fa photography"></a>
-      <a href="resume.pdf" target="_blank" class="fa resume"></a>
-      <a href="mailto:andrewjzhen@gmail.com" target="_blank" class="fa email"></a>
+<body>
+  <div>
+    <div id="header">
+      <div id="name-div"><a href="#" id="name">Andrew Zhen</a></div>
+
+      <div id="nav-div">
+        <div class="nav"><a href="about.html" id="about">About</a></div>
+        <div class="nav"><a href="http://ajzhen-photo.herokuapp.com" id="photo">Photography</a></div>
+        <div id="darkmode" class="nav">Dark Mode
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
+      </div>
     </div>
+    <br>
+    <div>
+      <p id="description">
+        I’m an interaction designer and developer with a passion in making
+        experiences more complete using the design process.
+      </p>
+    </div>
+
+    <i>Note: Project pages are a work in progress</i><br><br>
+    <div class="grid-container">
+      <div class="grid-item grid-left"><img src="assets/zilter.png">
+        <p id="title">Zilter Shopping Experience</p>
+        <p id="summary">Website idea with built-in research for shopping convenience</p>
+      </div>
+      <div class="grid-item grid-middle"><img src="assets/snaash.png">
+        <p id="title">SNAASH</p>
+        <p id="summary">Advice-giving platform, powered by elders</p>
+      </div>
+      <div class="grid-item grid-right"><img src="assets/rocket.gif">
+        <p id="title">Rocket Countdown</p>
+        <p id="summary">Animated rocket and color-changing background for those with deadlines</p>
+      </div>
+      <div class="grid-item grid-left"><img src="assets/quickly.png">
+        <p id="title">Quickly Web Application</p>
+        <p id="summary">Class-scheduling tool for UCSD students with punctual intent</p>
+      </div>
+      <div class="grid-item grid-middle"><img src="assets/mymoney.png">
+        <p id="title">Finance Tracker</p>
+        <p id="summary">Simple, yet effective bash program for finance keeping</p>
+      </div>
+    </div>
+
+    <div id="contact">
+      <ul>
+        <li><a href="mailto:andrewjzhen@gmail.com">Email</a></li>
+        <li><a href="assets/resume.pdf">Résumé</a></li>
+        <li><a href="https://www.linkedin.com/in/andrew-zhen/">LinkedIn</a></li>
+        <li><a href="https://github.com/andrewzhen">Github</a></li>
+        <li><a href="https://www.instagram.com/a.jzhen/">Instagram</a></li>
+      </ul>
+    </div>
+
+    <div id="footer"><p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p></div>
   </div>
+
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
