add google analytics

--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script>
+    gtag('config', 'UA-102146073-1');
+  </script>
   <title>Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/blue_peter.png">
   <link rel="stylesheet" type="text/css" href="aboutStyle.css">
